--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .bg-marine-blue-dark {
-    background-color: #001f3f; /* Replace with the desired marine blue color code */
+    background-color: #001f3f;
 }
