--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+main {
+  margin-right: 10%;
+  margin-left: 10%;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@media (max-width: 1021px) {
+  main {
+    margin: 0;
+  }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .Parking thead {
+    display: none;
+  }
+  .Parking,
+  .Parking tbody,
+  .Parking tr,
+  .Parking td {
+    display: block;
+    width: 100%;
+  }
+  .Parking tr {
+    margin-bottom: 20px;
+    background-color: white;
+  }
+
+  .Parking td {
+    text-align: right;
+    padding-left: 50%;
+    position: relative;
+  }
+  .Parking td::before {
+    content: attr(data-label);
+    position: absolute;
+    text-align: left;
+    left: 0;
+    width: 50%;
+    padding-left: 15px;
+    font-weight: bold;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
