updating CSS and changing the calender

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
+
+* {
+  font-family: "Poppins", sans-serif;
+}
+h1 {
+  font-weight: 600;
+}
 main {
   margin-right: 10%;
   margin-left: 10%;
@@ -6,9 +15,19 @@ main {
 }
 
 
+
 @media (max-width: 1021px) {
   main {
     margin: 0;
+  }
+
+  section{
+    padding: 0;
+    margin: 0;
+  }
+
+  .calenderGrid {
+    gap: 5px;
   }
 
   /* .container {
