--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,28 @@
 * {
   font-family: "Poppins", sans-serif;
 }
+
+body {
+  background-color: rgb(231, 231, 231);
+}
+
+.bg-marine-blue-dark {
+  background-color: #244051;
+}
+
+footer {
+  background-color: #7FA2AE;
+}
+
+footer h2 {
+  color: white;
+}
+
+
+.btn {
+  background-color: #696766;
+}
+
 h1 {
   font-weight: 600;
 }
@@ -12,6 +34,15 @@ main {
   margin-left: 10%;
   background-color: white;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
+}
+
+.Parking thead {
+  background-color: #F3F2EE;
+}
+
+.ParkingCard {
+  background-color: #F3F2EE;
+
 }
 
 
@@ -30,39 +61,5 @@ main {
     gap: 5px;
   }
 
-  /* .container {
-    display: flex;
-    justify-content: space-between;
-  } */
-
-  /* .Parking thead {
-    display: none;
-  }
-  .Parking,
-  .Parking tbody,
-  .Parking tr,
-  .Parking td {
-    display: block;
-    width: 100%;
-  }
-  .Parking tr {
-    margin-bottom: 20px;
-    background-color: white;
-  }
-
-  .Parking td {
-    text-align: right;
-    padding-left: 50%;
-    position: relative;
-  }
-  .Parking td::before {
-    content: attr(data-label);
-    position: absolute;
-    text-align: left;
-    left: 0;
-    width: 50%;
-    padding-left: 15px;
-    font-weight: bold;
-  } */
 }
 
