--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,14 @@ footer h2 {
   color: white;
 }
 
-
 .btn {
   background-color: #696766;
+  transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
+
+.btn:hover {
+  background-color: rgba(123, 119, 116, 0.82);
+  box-shadow: 3px 3px 3px rgba(0, 0, 0.3, 0.2);
 }
 
 h1 {
