--- a/src/App.css
+++ b/src/App.css
@@ -85,5 +85,14 @@ main {
   .rg\:col-span-1 {
     padding: 0;
   }
+
+}
+@media (max-width: 768px) {
+  .users-table th:last-of-type {
+    margin-right: 10px;
+  }
 }
 
+.users-table th:last-of-type {
+  text-align: right;
+}
